@@ -49,10 +49,6 @@ SkCanvas* SkAndroidFrameworkUtils::getBaseWrappedCanvas(SkCanvas* canvas) {
     return result;
 }
 
-void SkAndroidFrameworkUtils::UseLegacyLocalMatrixConcatenation() {
-    // Nothing to do yet.
-}
-
 bool SkAndroidFrameworkUtils::ShaderAsALinearGradient(SkShader* shader,
                                                       LinearGradientInfo* info) {
     SkASSERT(shader);
